--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -70,6 +70,234 @@
      <string>Resistor Categories</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="inStockCheckBox">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>190</y>
+      <width>93</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>In Stock</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="relationInputBox">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>90</y>
+      <width>81</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+   </widget>
+   <widget class="QLabel" name="relationInputLabel">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>100</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Vout/Vmax = </string>
+    </property>
+   </widget>
+   <widget class="Line" name="voltageDividerLine1">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>55</y>
+      <width>20</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="voltageDividerLine2">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>115</y>
+      <width>20</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="voltageDividerLine3">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>175</y>
+      <width>20</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="voltageDividerLine4">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>130</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="voltageDividerLabel1">
+    <property name="geometry">
+     <rect>
+      <x>525</x>
+      <y>35</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Vmax</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="voltageDividerLabel2">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>95</y>
+      <width>21</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>R1</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="voltageDividerLabel3">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>155</y>
+      <width>21</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>R2</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="voltageDividerLabel4">
+    <property name="geometry">
+     <rect>
+      <x>525</x>
+      <y>215</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GND</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="voltageDividerLabel5">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>130</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Vout</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="approxValueTextInput">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>90</y>
+      <width>231</width>
+      <height>41</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="approxValueLabel">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>60</y>
+      <width>201</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Approx. value for resistances</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="doesNotMatterRadioButton">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>140</y>
+      <width>151</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Does not matter</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="rohsCompliantCheckBox">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>220</y>
+      <width>151</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>RoHS Compliant</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="searchButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>270</y>
+      <width>961</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Search</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
