--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1004</width>
-    <height>600</height>
+    <height>665</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>20</x>
       <y>50</y>
-      <width>241</width>
-      <height>131</height>
+      <width>240</width>
+      <height>125</height>
      </rect>
     </property>
     <property name="selectionMode">
@@ -89,25 +89,10 @@
    <widget class="QDoubleSpinBox" name="relationInputBox">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>90</y>
+      <x>20</x>
+      <y>290</y>
       <width>81</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>11</pointsize>
-     </font>
-    </property>
-   </widget>
-   <widget class="QLabel" name="relationInputLabel">
-    <property name="geometry">
-     <rect>
-      <x>290</x>
-      <y>100</y>
-      <width>101</width>
-      <height>20</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -115,133 +100,31 @@
       <pointsize>10</pointsize>
      </font>
     </property>
-    <property name="text">
-     <string>Vout/Vmax = </string>
-    </property>
    </widget>
-   <widget class="Line" name="voltageDividerLine1">
+   <widget class="QLabel" name="relationInputLabel">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>55</y>
-      <width>20</width>
-      <height>40</height>
+      <x>20</x>
+      <y>260</y>
+      <width>121</width>
+      <height>31</height>
      </rect>
     </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="voltageDividerLine2">
-    <property name="geometry">
-     <rect>
-      <x>530</x>
-      <y>115</y>
-      <width>20</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="voltageDividerLine3">
-    <property name="geometry">
-     <rect>
-      <x>530</x>
-      <y>175</y>
-      <width>20</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="voltageDividerLine4">
-    <property name="geometry">
-     <rect>
-      <x>540</x>
-      <y>130</y>
-      <width>61</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QLabel" name="voltageDividerLabel1">
-    <property name="geometry">
-     <rect>
-      <x>525</x>
-      <y>35</y>
-      <width>41</width>
-      <height>20</height>
-     </rect>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="text">
-     <string>Vmax</string>
+     <string>Voltage Ratio</string>
     </property>
    </widget>
-   <widget class="QLabel" name="voltageDividerLabel2">
+   <widget class="QPlainTextEdit" name="approxValueTextInput_R1">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>95</y>
-      <width>21</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>R1</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="voltageDividerLabel3">
-    <property name="geometry">
-     <rect>
-      <x>530</x>
-      <y>155</y>
-      <width>21</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>R2</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="voltageDividerLabel4">
-    <property name="geometry">
-     <rect>
-      <x>525</x>
-      <y>215</y>
-      <width>41</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>GND</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="voltageDividerLabel5">
-    <property name="geometry">
-     <rect>
-      <x>600</x>
-      <y>130</y>
-      <width>41</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Vout</string>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="approxValueTextInput">
-    <property name="geometry">
-     <rect>
-      <x>720</x>
-      <y>90</y>
-      <width>231</width>
+      <x>80</x>
+      <y>380</y>
+      <width>181</width>
       <height>41</height>
      </rect>
     </property>
@@ -249,27 +132,14 @@
    <widget class="QLabel" name="approxValueLabel">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>60</y>
+      <x>20</x>
+      <y>350</y>
       <width>201</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>Approx. value for resistances</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="doesNotMatterRadioButton">
-    <property name="geometry">
-     <rect>
-      <x>720</x>
-      <y>140</y>
-      <width>151</width>
-      <height>26</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Does not matter</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="rohsCompliantCheckBox">
@@ -289,13 +159,119 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>270</y>
-      <width>961</width>
-      <height>29</height>
+      <y>570</y>
+      <width>240</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>Search</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="filtersButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>510</y>
+      <width>111</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Filters</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="resultsLabel">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>20</y>
+      <width>151</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Results</string>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="resultsTable">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>50</y>
+      <width>700</width>
+      <height>560</height>
+     </rect>
+    </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustIgnored</enum>
+    </property>
+    <property name="showGrid">
+     <bool>true</bool>
+    </property>
+    <property name="gridStyle">
+     <enum>Qt::SolidLine</enum>
+    </property>
+    <attribute name="horizontalHeaderVisible">
+     <bool>true</bool>
+    </attribute>
+    <attribute name="horizontalHeaderCascadingSectionResizes">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="horizontalHeaderMinimumSectionSize">
+     <number>43</number>
+    </attribute>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>349</number>
+    </attribute>
+    <column>
+     <property name="text">
+      <string>First Resistor</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Second Resistor</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QPlainTextEdit" name="approxValueTextInput_R2">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>430</y>
+      <width>181</width>
+      <height>41</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="R1_Label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>390</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>R1 = </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="L2_Label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>440</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>R2 = </string>
     </property>
    </widget>
   </widget>
