--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -106,6 +106,9 @@
     <property name="maximum">
      <double>1.000000000000000</double>
     </property>
+    <property name="singleStep">
+     <double>0.100000000000000</double>
+    </property>
    </widget>
    <widget class="QLabel" name="relationInputLabel">
     <property name="geometry">
@@ -264,7 +267,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>435</y>
+      <y>385</y>
       <width>201</width>
       <height>31</height>
      </rect>
@@ -274,7 +277,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>385</y>
+      <y>435</y>
       <width>201</width>
       <height>31</height>
      </rect>
