--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1004</width>
-    <height>665</height>
+    <width>1200</width>
+    <height>670</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Pick-a-Res: Voltage Divider Calculator</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QListWidget" name="resistorCategoriesList">
@@ -128,17 +128,17 @@
      <string>Voltage Ratio</string>
     </property>
    </widget>
-   <widget class="QLabel" name="approxValueLabel">
+   <widget class="QLabel" name="combosLabel">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>350</y>
-      <width>201</width>
-      <height>20</height>
+      <width>241</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Approx. value for resistances</string>
+     <string>Pick one of the resistances</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="rohsCompliantCheckBox">
@@ -193,7 +193,7 @@
      <string>Results</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="resultsTable">
+   <widget class="QTableWidget" name="R1_Table">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -201,7 +201,7 @@
      <rect>
       <x>280</x>
       <y>50</y>
-      <width>700</width>
+      <width>350</width>
       <height>560</height>
      </rect>
     </property>
@@ -228,12 +228,7 @@
     </attribute>
     <column>
      <property name="text">
-      <string>First Resistor</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Second Resistor</string>
+      <string>R1</string>
      </property>
     </column>
    </widget>
@@ -283,13 +278,131 @@
      </rect>
     </property>
    </widget>
+   <widget class="QTableWidget" name="R2_Table">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>635</x>
+      <y>50</y>
+      <width>350</width>
+      <height>560</height>
+     </rect>
+    </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustIgnored</enum>
+    </property>
+    <property name="showGrid">
+     <bool>true</bool>
+    </property>
+    <property name="gridStyle">
+     <enum>Qt::SolidLine</enum>
+    </property>
+    <attribute name="horizontalHeaderVisible">
+     <bool>true</bool>
+    </attribute>
+    <attribute name="horizontalHeaderCascadingSectionResizes">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="horizontalHeaderMinimumSectionSize">
+     <number>43</number>
+    </attribute>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>349</number>
+    </attribute>
+    <column>
+     <property name="text">
+      <string>R2</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QPlainTextEdit" name="finalVoltageRatioBox">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>570</y>
+      <width>175</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustIgnored</enum>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="devianceBox">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>480</y>
+      <width>175</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustToContents</enum>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="devianceLabel">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>455</y>
+      <width>140</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Deviance</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="finalVoltageRatioLabel">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>545</y>
+      <width>140</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Final Voltage Ratio</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1004</width>
+     <width>1200</width>
      <height>25</height>
     </rect>
    </property>
